Adjust templates to changed out method in framework

--- a/resources/views/home.phtml
+++ b/resources/views/home.phtml
@@ -1,7 +1,7 @@
 <!-- extends "default" -->
 <h1>ShinyCore</h1>
 <p>
-    Hello <?php $this->out('name'); ?>,<br>
+    Hello <?php $this->out($name); ?>,<br>
     you successfully installed the ShinyCore bootstrap application. You can now start crafting your project.
 </p>
 <p>
