--- a/resources/views/layouts/default.phtml
+++ b/resources/views/layouts/default.phtml
@@ -10,7 +10,7 @@
 
     <body>
         <div class="container">
-            <?php $this->out('content', false); ?>
+            <?php $this->out($content, false); ?>
         </div>
     </body>
 </html>
