--- a/resources/views/home.phtml
+++ b/resources/views/home.phtml
@@ -1,10 +1,10 @@
 <!-- extends "default" -->
-<h1>ShinyCore</h1>
+<h1>Endocore</h1>
 <p>
     Hello <?php $this->out($name); ?>,<br>
-    you successfully installed the ShinyCore bootstrap application. You can now start crafting your project.
+    you successfully installed the Endocore bootstrap application. You can now start crafting your project.
 </p>
 <p>
     For additional information on how to use this framework please check the
-    <a href="https://github.com/nekudo/shiny_core">ShinyCore GitHub page.</a>
+    <a href="https://github.com/bloatless/endocore">Endocore GitHub page.</a>
 </p>
