--- a/resources/views/layouts/default.phtml
+++ b/resources/views/layouts/default.phtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ShinyCore App</title>
+        <title>Endocore Sample App</title>
         <style>
             .container { width: 960px; margin: auto; }
         </style>
